# rust-ex-1-anime-cli

./: Cargo.toml  README.md
src/: base.rs  choose.rs  interactive.rs  main.rs  news.rs  popular.rs  releases.rs  walls.rs
src/utils/: mod.rs
